# LiGrad

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
LiGrad/: __init__.py  core.py
tests/: precession_calc.ipynb  test_basic.ipynb  time_series_extract.ipynb  transit_simulation.py
